# shmfx

./: CMakeLists.txt  PLAN.md  README.md
apps/logging/: README.md
apps/logging/examples/: demo_multi_producer.cpp  demo_producer.cpp
apps/logging/include/shmfx_logging/: log_center.h  logger.h
apps/logging/src/: log_center.cpp  logger.cpp
benchmark/: ring_benchmark.cpp
docs/: 01_DESIGN.md  02_DESIGN_REVIEW.md  02_OPEN_ISSUES.md  03_DESIGN_REVIEW.md  04_OPEN_ISSUES.md  04_USAGE.md  05_LOGGING_APP.md
docs/en/: 01_DESIGN.md  02_OPEN_ISSUES.md  03_LOGGING_APP.md  04_USAGE.md  PLAN.md
docs/vi/: 01_DESIGN.md  03_LOGGING_APP.md  04_USAGE.md  PLAN.md
examples/: raw_segment.cpp  ring_mpsc.cpp
include/shmfx/: shm_error.h  shm_header.h  shm_lifecycle.h  shm_manager.h  shm_registry.h  shm_ring.h  shm_security.h  shm_sync.h  shm_types.h
src/: shm_lifecycle.cpp  shm_manager.cpp  shm_registry.cpp  shm_ring.cpp  shm_security.cpp  shm_sync.cpp
tests/: oi07_mutex_guard_test.cpp  phase10_ipc_logging_test.cpp  phase10_mpsc_stress_test.cpp  phase3_manager_registry_test.cpp  phase4_lifecycle_test.cpp  phase5_security_test.cpp  phase6_ring_test.cpp  phase7_logger_test.cpp  phase8_log_center_test.cpp
